# cosmic-capture-kit

./: .gitignore  CLI.md  Cargo.toml  README.md  build.rs  compositor-capture-extras.md  dependencies.md
.github/: FUNDING.yml
.github/workflows/: build-only.yml
docs/: ARCHITECTURE.md
res/: CosmicCaptureKit.entitlements  dev.frosthaven.CosmicCaptureKit.desktop
res/icons/: ATTRIBUTION.md
scripts/: mirror-release.sh
src/: compose.rs  decoration.rs  geometry.rs  glass.rs  instance.rs  main.rs  recording_ui.rs  selection.rs  shortcuts.rs  update.rs  util.rs  wallpaper.rs
src/app/: application.rs  audio_ui.rs  capture_flow.rs  keyboard.rs  layout.rs  mod.rs  num_field.rs  persist.rs  portal.rs  recording.rs  shell.rs  subscriptions.rs  surfaces.rs  theme.rs
src/app/message/: capture.rs  detect.rs  mod.rs  permissions.rs  preview.rs  recording.rs  settings.rs  window_chrome.rs
src/app/overlay/: marks.rs  menus.rs  mod.rs
src/app/overlay/toolbar/: layout.rs  mod.rs
src/app/permissions/: mod.rs  view.rs
src/app/preview/: chrome.rs  covermark.rs  edit.rs  image.rs  layers.rs  mod.rs  open.rs  playback.rs  share.rs  sizing.rs  surface.rs  timeline.rs  video.rs  viewport.rs
src/app/settings/: deps.rs  mic_test.rs  mod.rs  row.rs
src/app/settings/pages/: about.rs  audio.rs  capture.rs  general.rs  health.rs  keyboard.rs  mod.rs  recordings.rs  scanner.rs  screenshots.rs  video.rs
src/app/update/: capture.rs  detect.rs  mod.rs  permissions.rs  recording.rs  settings.rs  window_chrome.rs
src/audio/: capture.rs  clean_mic.rs  config.rs  devices.rs  ducking.rs  input.rs  meter.rs  meters.rs  mod.rs  monitor_latency.rs  pulse_ffi.rs
src/audio/filters/: aec.rs  agc.rs  duck.rs  gate.rs  mod.rs  noise.rs  vad.rs
src/cli/: diagnostics.rs  inspect.rs  mod.rs  sync.rs
src/detect/: luma.rs  mod.rs
src/detect/codes/: action.rs  mod.rs  outline.rs
src/detect/text/: layout.rs  mod.rs  parse.rs  preprocess.rs
src/encode/: command.rs  device.rs  gpu.rs  mod.rs  pixfmt.rs  plan.rs  preset.rs  resolution.rs
src/media/: png.rs
src/mixer/: clock.rs  control.rs  mod.rs  track.rs
src/platform/: backend.rs  compositor.rs  daemon_ipc.rs  global_shortcuts.rs  mod.rs  screencast_stub.rs  services.rs  tray_stub.rs
src/platform/linux/: autostart.rs  daemon.rs  mod.rs  tray.rs
src/platform/linux/cosmic/: compositor.rs  mod.rs  quirks.rs  theme.rs  wallpaper.rs
src/platform/linux/gnome/: mod.rs
src/platform/linux/kde/: mod.rs
src/platform/linux/native/: screencopy.rs  screenshot.rs
src/platform/linux/portal/: pipewire.rs  pixfmt.rs  screencast.rs
src/platform/linux/wlroots/: mod.rs
src/record/: av_sync_tests.rs  finalize.rs  media_clock_e2e_tests.rs  mod.rs  owned.rs  pipewire.rs  pump.rs  screencopy.rs  screencopy_live_tests.rs  sync_probe.rs  zero_copy.rs
src/share/: clipboard.rs  mod.rs  notify.rs  open.rs  reexec.rs  wifi.rs
src/state/: mod.rs  schema.rs  store.rs
src/widgets/: arrow_cursor.rs  drag_area.rs  hide_when_clipped.rs  mod.rs  output_selection.rs  region_selection.rs  zoom_pan.rs
tests/: cli.rs
tests/ocr/: README.md
tests/ocr/when-did-we-stop/: expected.txt
